feat: deleted the method to mock the ActivationConfig